Add initial project configuration files for IntelliJ IDEA
- Created markdown.xml to configure Markdown settings with Compose preview.
- Added mindspace.iml to define module structure and settings.
- Introduced misc.xml for project root manager output configuration.
- Created modules.xml to manage project modules.
- Added vcs.xml to set up Git as the version control system for the project.

--- a/mobile/.gitignore
+++ b/mobile/.gitignore
@@ -13,3 +13,18 @@ web-build/
 .env
 .env.local
 .DS_Store
+
+# React Native specific
+android/app/build/
+android/build/
+ios/build/
+*.apk
+*.aab
+*.ipa
+
+# IDE
+.vscode/
+.idea/
+
+# Logs
+*.log
